# finance_alpha

./: .env.example  .gitignore  LICENSE  README.md  config.yaml  pyproject.toml
.streamlit/: config.toml
src/finance_alpa/: config.py  db.py  portfolio.py  scheduler.py
src/finance_alpa/alerts/: notify.py  rules.py
src/finance_alpa/ingest/: broker_csv.py  finnhub_news.py  fmp.py  sa_rss.py  yfinance_quotes.py
src/finance_alpa/screeners/: rank.py
src/finance_alpa/ui/: _theme.py  app.py
src/finance_alpa/ui/pages/: 1_Portfolio.py  2_Screener.py  3_News.py  4_Alerts.py
tests/: conftest.py
tests/unit/: test_broker_csv.py  test_config.py  test_db_migration.py  test_portfolio.py
