[project]
name = "finance_alpa"
version = "0.1.0"
description = "Local financial workspace aggregating Seeking Alpha Premium data and alternative APIs."
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "streamlit>=1.40",
    "duckdb>=1.1",
    "yfinance>=0.2.50",
    "feedparser>=6.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.3",
    "pydantic>=2.8",
    "pydantic-settings>=2.5",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "apscheduler>=3.10",
    "plyer>=2.1",
    "httpx>=0.27",
    "pandas>=2.2",
    "plotly>=5.24",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
